<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".menu_principal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/carrito_titulo"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp"
        android:fontFamily="@font/amaranth"
        android:gravity="center"
        android:shadowColor="#FFC400"
        android:shadowDx="4"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="@string/tipo_menu"
        android:textColor="#000000"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#FFC400"
        android:onClick="pizzas"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/pizza_indice" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:shadowColor="@color/white"
            android:shadowDx="4"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="@string/pizzas"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#FFC400"
        android:onClick="hamburguesas"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="513dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:shadowColor="@color/white"
            android:shadowDx="4"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="@string/hamburguesas"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/hamburguesa_indice" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#FFC400"
        android:onClick="kebabs"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/kebab_indice" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:shadowColor="@color/white"
            android:shadowDx="4"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="@string/kebabs"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#FFC400"
        android:onClick="perritos"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="513dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:shadowColor="@color/white"
            android:shadowDx="4"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="@string/perritos"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/perrito_indice" />
    </LinearLayout>

</RelativeLayout>