<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".carrito">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="187dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="268dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:shadowColor="#FFC400"
            android:shadowDx="4"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="@string/carrito"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/carrito" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pedido1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/foto1"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:shadowColor="#FFFFFF"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_b_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_n_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_p_1"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pedido2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/foto2"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:shadowColor="#FFFFFF"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_b_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_n_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_p_2"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center|center_vertical"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pedido3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/foto3"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:shadowColor="#FFFFFF"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_b_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_n_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_p_3"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pedido4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/foto4"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:shadowColor="#FFFFFF"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_b_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_n_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_p_4"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <Button
        android:id="@+id/b_pagar"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="#68D111"
        android:onClick="pagar"
        android:text="@string/pagar" />

    <Button
        android:id="@+id/button4"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="#FFFF8D"
        android:onClick="continuar_compra"
        android:text="@string/continuar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="49dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="31dp"
        android:onClick="vaciar"
        app:srcCompat="@drawable/borrar"
        tools:srcCompat="@drawable/borrar" />

</RelativeLayout>